--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -690,7 +690,10 @@ img{
 }
 
 /* Active Modal */
-
+.active-modal{
+    opacity: 1;
+    visibility: visible;
+}
 
 /*==================== PORTFOLIO ====================*/
 
